Fix day's vertical alignment in its parent div

--- a/src/components/services/schedule/components/styles/Timetable.css
+++ b/src/components/services/schedule/components/styles/Timetable.css
@@ -50,7 +50,9 @@
 }
 
 .Timetable .days div {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .Timetable .fields {
